--- a/boot-dependencies/pom.xml
+++ b/boot-dependencies/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <boot.starter.parent.version>2.3.1.RELEASE</boot.starter.parent.version>
+        <spring.boot.maven.plugin.version>2.3.1.RELEASE</spring.boot.maven.plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -25,6 +26,11 @@
                 <version>${boot.starter.parent.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.maven.plugin.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
