--- a/boot-jdbctemplate/pom.xml
+++ b/boot-jdbctemplate/pom.xml
@@ -5,10 +5,11 @@
     <parent>
         <artifactId>springboot-study</artifactId>
         <groupId>com.dxp</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>${revision}</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
     <artifactId>boot-jdbctemplate</artifactId>
 
