feat(activemq): activemq订阅,持久订阅,队列

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>boot-jdbctemplate</module>
         <module>boot-websocket</module>
         <module>boot-redis</module>
+        <module>boot-activemq</module>
     </modules>
 
     <packaging>pom</packaging>
