--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>boot-websocket</module>
         <module>boot-redis</module>
         <module>boot-activemq</module>
+        <module>boot-graphql</module>
     </modules>
 
     <packaging>pom</packaging>
