feat(spring-session): spring session使用

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>boot-redis</module>
         <module>boot-activemq</module>
         <module>boot-graphql</module>
+        <module>boot-spring-session</module>
     </modules>
 
     <packaging>pom</packaging>
