--- a/boot-dependencies/pom.xml
+++ b/boot-dependencies/pom.xml
@@ -17,6 +17,7 @@
         <boot.starter.parent.version>2.3.1.RELEASE</boot.starter.parent.version>
         <spring.boot.maven.plugin.version>2.3.1.RELEASE</spring.boot.maven.plugin.version>
         <graphql.spring.boot.starter.version>5.0.2</graphql.spring.boot.starter.version>
+        <mybatis.spring.boot.starter.version>2.1.3</mybatis.spring.boot.starter.version>
     </properties>
 
     <dependencyManagement>
@@ -38,7 +39,26 @@
                 <artifactId>graphql-spring-boot-starter</artifactId>
                 <version>${graphql.spring.boot.starter.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.spring.boot.starter.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <configuration>
+                        <executable>true</executable>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
