--- a/boot-dependencies/pom.xml
+++ b/boot-dependencies/pom.xml
@@ -18,6 +18,7 @@
         <spring.boot.maven.plugin.version>2.3.1.RELEASE</spring.boot.maven.plugin.version>
         <graphql.spring.boot.starter.version>5.0.2</graphql.spring.boot.starter.version>
         <mybatis.spring.boot.starter.version>2.1.3</mybatis.spring.boot.starter.version>
+        <mybatis.plus.boot.starter.version>3.3.2</mybatis.plus.boot.starter.version>
     </properties>
 
     <dependencyManagement>
@@ -44,6 +45,12 @@
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.spring.boot.starter.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis.plus.boot.starter.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
