--- a/boot-dependencies/pom.xml
+++ b/boot-dependencies/pom.xml
@@ -19,6 +19,7 @@
         <graphql.spring.boot.starter.version>5.0.2</graphql.spring.boot.starter.version>
         <mybatis.spring.boot.starter.version>2.1.3</mybatis.spring.boot.starter.version>
         <mybatis.plus.boot.starter.version>3.3.2</mybatis.plus.boot.starter.version>
+        <protobuf.java.version>3.12.2</protobuf.java.version>
     </properties>
 
     <dependencyManagement>
@@ -50,7 +51,11 @@
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis.plus.boot.starter.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf.java.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
