--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <properties>
         <revision>1.0.0-SNAPSHOT</revision>
+        <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
@@ -27,6 +28,7 @@
         <module>boot-spring-session</module>
         <module>boot-mybatis</module>
         <module>boot-mybatis-plus</module>
+        <module>boot-netty</module>
     </modules>
 
     <packaging>pom</packaging>
