--- a/boot-security/src/main/resources/application.properties
+++ b/boot-security/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 ### server
 server.port=8089
 ### security
-spring.security.user.name=admin
-spring.security.user.password=123456
-spring.security.user.roles=*
+#spring.security.user.name=admin
+#spring.security.user.password=123456
+#spring.security.user.roles=*
+# thymeleaf
