--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,6 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.maven.plugin.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.graphql-java</groupId>
                 <artifactId>graphql-spring-boot-starter</artifactId>
                 <version>${graphql.spring.boot.starter.version}</version>
@@ -79,6 +74,10 @@
                     <groupId>org.jetbrains.kotlin</groupId>
                     <artifactId>kotlin-maven-plugin</artifactId>
                     <version>${kotlin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
                 </plugin>
             </plugins>
         </pluginManagement>
